@@ -1,3 +1,9 @@
+2007-04-10  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/unittest/case.py:
+	* gaupol/unittest/__init__.py:
+	Use atexit.register to remove temporary files.
+
 2007-04-07  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/_agents/search.py:
